Added some finishing touches.

--- a/examples/basic.tex
+++ b/examples/basic.tex
@@ -3,7 +3,7 @@
 % \usepackage[T1]{fontenc}
 % \usepackage{lmodern}
 \usepackage{fontspec}
-% \usepackage{markdown}
+% \usepackage[inlineFootnotes]{markdown}
 \usepackage{hyperref}
 \begin{document}
 
