Added markdown to a code that missed it.

--- a/main.tex
+++ b/main.tex
@@ -475,7 +475,7 @@ This is a text paragraph with _emphasis_.
 There exist formal language parsers written solely in \TeX. These parsers
 recognize regular [@l3proj16] and context-free LL(1) languages [@carliste00].
 Markdown is not context-free:
-```
+```markdown
 ``There is a literal backtick (`) here.``
 ```
 and a parser needs to be able to backtrack over the entire input:
