Updated the title page for TUG 2017.

--- a/main.tex
+++ b/main.tex
@@ -269,11 +269,11 @@
 
 % Metadata
 \title{
-  A \texorpdfstring{%
+  Using \texorpdfstring{%
     \raisebox{-1.7mm}{\includegraphics[scale=0.2]{markdown-mark}}%
-  }{Markdown}\ Interpreter for \TeX}
+  }{Markdown} inside \TeX{} Documents}
 \subtitle{%
-  Project MUNI 33 / 12 2015
+  TUG@Bacho\TeX{} 2017
   \texorpdfstring{\url{https://github.com/witiko/markdown}}{}%
 }
 \author{Vít Novotný}
